- fixed unreadable table fullscreen option

--- a/design/standard/stylesheets/anychart.css
+++ b/design/standard/stylesheets/anychart.css
@@ -139,4 +139,6 @@
     background-color:#b60906;
 }
 
-
+.anychart-tablePopup {
+    background-color: #fff;
+}
